--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.0.12",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "ramda": "^0.25.0",
     "validator": "^9.4.1"
   },
   "devDependencies": {
