--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
     "classnames": "^2.2.5",
+    "font-awesome": "^4.7.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.0",
     "react": "^16.3.1",
