--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.0",
     "prop-types": "^15.6.2",
+    "ramda": "^0.25.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-moment": "^0.7.0",
