--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "recompose": "^0.27.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.5",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
